修改部分页面，删除不必要pom文件

--- a/src/main/resources/templates/example.html
+++ b/src/main/resources/templates/example.html
@@ -6,6 +6,7 @@
 </head><body>
 <div id="default-editor-page__placeholder" class="panel">
     <link rel="stylesheet" th:href="${pathNew}">
+    <link rel="stylesheet" th:href="${pathExample1}">
     <section class="wrapper bg-gradient-primary">
         <div class="container py-18 pt-md-18 pb-md-18">
             <div class="row text-center">
