添加个人页面

--- a/src/main/resources/static/apps/wenhao-javaw/css/style.css
+++ b/src/main/resources/static/apps/wenhao-javaw/css/style.css
@@ -33,10 +33,11 @@
 
 .portfolio-with-form .img {
     position: absolute;
-    width: 720px;
+    width: 450px;
     height: 629px;
     top: 0;
     left: 0;
+    margin-left: 30%;
 }
 
 .portfolio-with-form .header {
