--- a/src/main/resources/templates/suposOpenApiCall.html
+++ b/src/main/resources/templates/suposOpenApiCall.html
@@ -123,6 +123,8 @@
         <select id="http-method" class="http-method">
             <option value="post">POST</option>
             <option value="get">GET</option>
+            <option value="put">PUT</option> <!-- New option for PUT -->
+            <option value="delete">DELETE</option> <!-- New option for DELETE -->
         </select>
         <label for="api-url">API URL:</label>
         <input type="text" id="api-url" class="input-field" placeholder="Enter API URL">
@@ -164,14 +166,16 @@ document.addEventListener("DOMContentLoaded", function () {
 
     httpMethodSelect.addEventListener("change", function () {
         const selectedMethod = httpMethodSelect.value;
-        if (selectedMethod === "get") {
+        if (selectedMethod === "get" || selectedMethod === "delete") {
             jsonBodyInput.disabled = true;
             jsonBodyInput.style.backgroundColor = "lightgray"; // 将背景颜色设置为灰色
             jsonBodyInput.placeholder = "disabled"; // 将 placeholder 文本改为 "disabled"
+            jsonBodyInput.value = '';
         } else {
             jsonBodyInput.disabled = false;
             jsonBodyInput.style.backgroundColor = "black"; // 恢复背景颜色为黑色
             jsonBodyInput.placeholder = "Enter JSON Body (e.g., {\"key\": \"value\"})"; // 将 placeholder 文本改为 "disabled"
+            jsonBodyInput.value = '';
         }
     });
 
@@ -225,12 +229,16 @@ document.addEventListener("DOMContentLoaded", function () {
                 responseHeaders.style.color = "Grey";
                 responseHeaders.classList.add("response-result");
                 const responseText = await response.text();
-                const bodyText = await JSON.parse(responseText);
-                const bodyTextHtml = JSON.stringify(bodyText, null, 2);
-                responseBody.textContent = bodyTextHtml;
-                responseBody.style.color = "lightgreen"; // 正确格式时文字颜色为浅绿色
-                responseBody.style.backgroundColor = "black"; // 恢复背景颜色为黑色
-                responseBody.classList.add("response-result");
+                if (responseText !=null && responseText !=undefined && responseText.trim() !== ''){
+                    const bodyText = await JSON.parse(responseText);
+                    const bodyTextHtml = JSON.stringify(bodyText, null, 2);
+                    responseBody.textContent = bodyTextHtml;
+                    responseBody.style.color = "lightgreen"; // 正确格式时文字颜色为浅绿色
+                    responseBody.style.backgroundColor = "black"; // 恢复背景颜色为黑色
+                    responseBody.classList.add("response-result");
+                }else {
+                    responseBody.textContent = '';
+                }
             } else if (selectedMethod === "post") {
                 const authorizationHeader  = await signHeader(extractURI(apiUrl),selectedMethod.toUpperCase(),extractQueryJson(apiUrl),null,ak,sk)
                 auth.textContent=authorizationHeader
@@ -252,12 +260,72 @@ document.addEventListener("DOMContentLoaded", function () {
                 responseHeaders.style.color = "Grey";
                 responseHeaders.classList.add("response-result");
                 const responseText = await response.text();
-                const bodyText = await JSON.parse(responseText);
-                const bodyTextHtml = JSON.stringify(bodyText, null, 2);
-                responseBody.textContent = bodyTextHtml;
-                responseBody.style.color = "lightgreen"; // 正确格式时文字颜色为浅绿色
-                responseBody.style.backgroundColor = "black"; // 恢复背景颜色为黑色
-                responseBody.classList.add("response-result");
+                if (responseText !=null && responseText !=undefined && responseText.trim() !== ''){
+                    const bodyText = await JSON.parse(responseText);
+                    const bodyTextHtml = JSON.stringify(bodyText, null, 2);
+                    responseBody.textContent = bodyTextHtml;
+                    responseBody.style.color = "lightgreen"; // 正确格式时文字颜色为浅绿色
+                    responseBody.style.backgroundColor = "black"; // 恢复背景颜色为黑色
+                    responseBody.classList.add("response-result");
+                }else {
+                    responseBody.textContent = '';
+                }
+            } else if (selectedMethod === "put") {
+                const authorizationHeader  = await signHeader(extractURI(apiUrl),selectedMethod.toUpperCase(),extractQueryJson(apiUrl),null,ak,sk)
+                auth.textContent=authorizationHeader
+                const requestBody = JSON.parse(jsonBody);
+                const response = await fetch(apiUrl, {
+                    method: "PUT",
+                    headers: {
+                        "Authorization":authorizationHeader,
+                        "Content-Type": "application/json;charset=utf-8",
+                    },
+                    body: JSON.stringify(requestBody),
+                });
+                const headersText = `Status: ${response.status} ${response.statusText}\n`;
+                const headers = [...response.headers];
+                const formattedHeaders = headers.map(header => `${header[0]}: ${header[1]}`).join('\n');
+                responseHeaders.textContent = headersText + formattedHeaders;
+                responseHeaders.style.color = "Grey";
+                responseHeaders.classList.add("response-result");
+                const responseText = await response.text();
+                if (responseText !=null && responseText !=undefined && responseText.trim() !== ''){
+                    const bodyText = await JSON.parse(responseText);
+                    const bodyTextHtml = JSON.stringify(bodyText, null, 2);
+                    responseBody.textContent = bodyTextHtml;
+                    responseBody.style.color = "lightgreen"; // 正确格式时文字颜色为浅绿色
+                    responseBody.style.backgroundColor = "black"; // 恢复背景颜色为黑色
+                    responseBody.classList.add("response-result");
+                }else {
+                    responseBody.textContent = '';
+                }
+            }else if (selectedMethod === "delete") {
+                const authorizationHeader  = await signHeader(extractURI(apiUrl),selectedMethod.toUpperCase(),extractQueryJson(apiUrl),null,ak,sk)
+                auth.textContent=authorizationHeader
+                const response = await fetch(apiUrl, {
+                    method: "DELETE",
+                    headers: {
+                        "Authorization":authorizationHeader,
+                        "Content-Type": "application/json;charset=utf-8",
+                    },
+                });
+                const headersText = `Status: ${response.status} ${response.statusText}\n`;
+                const headers = [...response.headers];
+                const formattedHeaders = headers.map(header => `${header[0]}: ${header[1]}`).join('\n');
+                responseHeaders.textContent = headersText + formattedHeaders;
+                responseHeaders.style.color = "Grey";
+                responseHeaders.classList.add("response-result");
+                const responseText = await response.text();
+                if (responseText !=null && responseText !=undefined && responseText.trim() !== ''){
+                    const bodyText = await JSON.parse(responseText);
+                    const bodyTextHtml = JSON.stringify(bodyText, null, 2);
+                    responseBody.textContent = bodyTextHtml;
+                    responseBody.style.color = "lightgreen"; // 正确格式时文字颜色为浅绿色
+                    responseBody.style.backgroundColor = "black"; // 恢复背景颜色为黑色
+                    responseBody.classList.add("response-result");
+                }else {
+                    responseBody.textContent = '';
+                }
             }
         } catch (error) {
             console.error(error);
