--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -31,7 +31,7 @@
             text-decoration: none;
             margin: 0 1em;
             font-size: 16px;
-            padding: 8px 16px;
+            padding: 8px;
             border-radius: 4px;
             transition: background-color 0.3s, color 0.3s;
         }
@@ -159,7 +159,7 @@
     <a href="javascript:void(0);" onclick="packageHistory()">历史记录</a>
     <!--    <a href="#">联系我们</a>-->
     <a href="javascript:void(0);" id="addPackageBtn">新增记录</a>
-
+    <a href="/apps/wenhao-javaw/packageCharts">败家统计</a>
 </nav>
 
 <div class="container">
