修改前端页面适配手机

--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -156,10 +156,11 @@
 
 <nav>
     <a href="javascript:void(0);" onclick="deleteAll()">清空</a>
-    <a href="javascript:void(0);" onclick="packageHistory()">历史记录</a>
+    <a href="javascript:void(0);" onclick="packageHistory()">历史</a>
     <!--    <a href="#">联系我们</a>-->
-    <a href="javascript:void(0);" id="addPackageBtn">新增记录</a>
-    <a href="/apps/wenhao-javaw/packageCharts">败家统计</a>
+    <a href="javascript:void(0);" id="addPackageBtn">新增</a>
+    <a href="/apps/wenhao-javaw/packageCharts">统计</a>
+    <a href="/apps/wenhao-javaw/grafana/d/f185c88c-917d-4021-aef6-a4a717eaba69/new-dashboard?orgId=2&from=1703884953559&to=1703906553559" target="_blank">监控</a>
 </nav>
 
 <div class="container">
