新增配置数据

--- a/src/main/resources/templates/note.html
+++ b/src/main/resources/templates/note.html
@@ -160,7 +160,8 @@
     <!--    <a href="#">联系我们</a>-->
     <a href="javascript:void(0);" id="addPackageBtn">新增</a>
     <a href="/apps/wenhao-javaw/packageCharts">统计</a>
-    <a href="/apps/wenhao-javaw/grafana/d/f185c88c-917d-4021-aef6-a4a717eaba69/new-dashboard?orgId=2&from=1703884953559&to=1703906553559" target="_blank">监控</a>
+<!--    <a href="http://120.27.149.127:30000/apps/wenhao-javaw/grafana/d/f185c88c-917d-4021-aef6-a4a717eaba69/new-dashboard?orgId=2" target="_blank">监控</a>-->
+    <a href="/apps/wenhao-javaw/grafana/d/f185c88c-917d-4021-aef6-a4a717eaba69/new-dashboard?orgId=2" target="_blank">监控</a>
 </nav>
 
 <div class="container">
