--- a/src/main/resources/templates/spaceX.html
+++ b/src/main/resources/templates/spaceX.html
@@ -22,6 +22,7 @@
             align-self: stretch;
             flex-grow: 1;
             object-fit: cover;
+            max-width:100%
         }
 
         .crew-dragon-flight .top-level-stats {
