修复页面跳转问题

--- a/src/main/resources/templates/qrcodeGenerate.html
+++ b/src/main/resources/templates/qrcodeGenerate.html
@@ -165,7 +165,7 @@
             var email = document.querySelector('.text-input-2 .input').value;
 
             // 拼接 URL
-            var url = "/qrcodegenerate?name=" + encodeURIComponent(name) + "&email=" + encodeURIComponent(email);
+            var url = "/apps/wenhao-javaw/qrcodegenerate?name=" + encodeURIComponent(name) + "&email=" + encodeURIComponent(email);
 
             // 页面跳转
             window.location.href = url;
