--- a/src/main/resources/templates/spaceX.html
+++ b/src/main/resources/templates/spaceX.html
@@ -54,7 +54,7 @@
             height: calc( 134 / 940 * 100vh);
             top: calc( 24 / 940 * 100vh);
             left: calc( 13 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/outer-ring-stroke-3.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-3.svg);
             background-size: 100% 100%;
         }
 
@@ -194,7 +194,7 @@
             height: calc( 134 / 940 * 100vh);
             top: calc( 24 / 940 * 100vh);
             left: calc( 12 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/outer-ring-stroke-8.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-8.svg);
             background-size: 100% 100%;
         }
 
@@ -213,7 +213,7 @@
             height: calc( 52 / 940 * 100vh);
             top: calc( 106 / 940 * 100vh);
             left: calc( 12 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/fill-ring-stroke-3.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-3.svg);
             background-size: 100% 100%;
         }
 
@@ -292,7 +292,7 @@
             height: calc( 134 / 940 * 100vh);
             top: calc( 24 / 940 * 100vh);
             left: calc( 13 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/outer-ring-stroke-7.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke-7.svg);
             background-size: 100% 100%;
         }
 
@@ -410,7 +410,7 @@
             height: calc( 134 / 940 * 100vh);
             top: calc( 24 / 940 * 100vh);
             left: calc( 12 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/outer-ring-stroke.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/outer-ring-stroke.svg);
             background-size: 100% 100%;
         }
 
@@ -420,7 +420,7 @@
             height: calc( 52 / 940 * 100vh);
             top: calc( 106 / 940 * 100vh);
             left: calc( 12 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/fill-ring-stroke-4.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-4.svg);
             background-size: 100% 100%;
         }
 
@@ -532,7 +532,7 @@
             height: calc( 106 / 940 * 100vh);
             top: calc( 17 / 940 * 100vh);
             left: calc( 11 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/fill-ring-stroke-6.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke-6.svg);
             background-size: 100% 100%;
         }
 
@@ -622,7 +622,7 @@
             height: calc( 106 / 940 * 100vh);
             top: calc( 17 / 940 * 100vh);
             left: calc( 11 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/fill-ring-stroke.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/fill-ring-stroke.svg);
             background-size: 100% 100%;
         }
 
@@ -1284,7 +1284,7 @@
             height: calc( 167 / 940 * 100vh);
             top: -55px;
             left: -57px;
-            background-image: url(../apps/wenhao-javaw/spaceXImg/container.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/container.svg);
             background-size: 100% 100%;
         }
 
@@ -1355,7 +1355,7 @@
             height: calc( 167 / 940 * 100vh);
             top: -55px;
             left: -57px;
-            background-image: url(../apps/wenhao-javaw/spaceXImg/container-2.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/container-2.svg);
             background-size: 100% 100%;
         }
 
@@ -1557,7 +1557,7 @@
             height: calc( 27 / 940 * 100vh);
             top: calc( 2 / 940 * 100vh);
             left: calc( 2 / 1568 * 100vw);
-            background-image: url(../apps/wenhao-javaw/spaceXImg/vector.svg);
+            background-image: url(apps/wenhao-javaw/spaceXImg/vector.svg);
             background-size: 100% 100%;
         }
 
@@ -1643,7 +1643,7 @@
 </head>
 <body>
 <div class="crew-dragon-flight">
-    <img class="background" src="../apps/wenhao-javaw/spaceXImg/background.png" />
+    <img class="background" src="apps/wenhao-javaw/spaceXImg/background.png" />
     <div class="top-level-stats">
         <div id="co" class="co">
             <div class="overlap">
@@ -1653,7 +1653,7 @@
                 </div>
                 <div class="fill-ring">
                     <div class="overlap-group">
-                        <img class="fill-ring-stroke" src="../apps/wenhao-javaw/spaceXImg/fill-ring-stroke-2.svg" />
+                        <img class="fill-ring-stroke" src="apps/wenhao-javaw/spaceXImg/fill-ring-stroke-2.svg" />
                         <div class="rectangle-2"></div>
                         <div class="rectangle-3"></div>
                         <div class="rectangle-4"></div>
@@ -1726,7 +1726,7 @@
                 <div class="container-2"></div>
                 <div class="overlap-group-wrapper">
                     <div class="overlap-group-3">
-                        <img class="outer-ring-stroke" src="../apps/wenhao-javaw/spaceXImg/outer-ring-stroke-2.svg" />
+                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-2.svg" />
                         <div class="rectangle-13"></div>
                         <div class="rectangle-14"></div>
                     </div>
@@ -1746,7 +1746,7 @@
                 <div class="container-2"></div>
                 <div class="overlap-group-wrapper">
                     <div class="overlap-group-3">
-                        <img class="outer-ring-stroke" src="../apps/wenhao-javaw/spaceXImg/outer-ring-stroke-5.svg" />
+                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-5.svg" />
                         <div class="rectangle-13"></div>
                         <div class="rectangle-14"></div>
                     </div>
@@ -1784,7 +1784,7 @@
                 <div class="container-2"></div>
                 <div class="div-wrapper">
                     <div class="overlap-group-4">
-                        <img class="outer-ring-stroke" src="../apps/wenhao-javaw/spaceXImg/outer-ring-stroke-4.svg" />
+                        <img class="outer-ring-stroke" src="apps/wenhao-javaw/spaceXImg/outer-ring-stroke-4.svg" />
                         <div class="rectangle-19"></div>
                         <div class="rectangle-20"></div>
                         <div class="rectangle-21"></div>
@@ -1801,7 +1801,7 @@
     <div class="space-x-dragon">
         <div class="overlap-3">
             <div class="shadow"></div>
-            <img class="spacex-model" src="../apps/wenhao-javaw/spaceXImg/spacex-3d-model-render.png" id="spacex-model" />
+            <img class="spacex-model" src="apps/wenhao-javaw/spaceXImg/spacex-3d-model-render.png" id="spacex-model" />
             <p class="CABIN-MICS-RECORDING">
                 <span class="span">CABIN MICS: </span> <span class="text-wrapper-17">RECORDING</span>
             </p>
@@ -1817,7 +1817,7 @@
         <div class="text-wrapper-24">Connected</div>
         <div class="text-wrapper-25">Wing</div>
         <div class="text-wrapper-26">Connected</div>
-        <img class="divider" src="../apps/wenhao-javaw/spaceXImg/divider.svg" />
+        <img class="divider" src="apps/wenhao-javaw/spaceXImg/divider.svg" />
     </div>
     <div class="text-wrapper-27">VEHICLE OVERVIEW</div>
     <div class="LHS-pane">
@@ -1924,27 +1924,28 @@
     <div class="dock">
         <div class="overlap-6">
             <div class="dock-background"></div>
-            <img class="dock-container" src="../apps/wenhao-javaw/spaceXImg/dock-container.svg" />
+            <img class="dock-container" src="apps/wenhao-javaw/spaceXImg/dock-container.svg" />
             <div class="icons">
                 <div class="overview">
                     <div class="text-wrapper-38">Overview</div>
-                    <img class="icon" src="../apps/wenhao-javaw/spaceXImg/icon.svg" />
-                </div>
+                    <svg width="24" height="29" viewBox="0 0 24 29" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.10661 19.2386C2.81309 17.9576 2.66548 16.6475 2.66661 15.3333C2.66661 8.54931 6.53728 2.75198 11.9999 0.423981C17.4626 2.75198 21.3333 8.54931 21.3333 15.3333C21.3333 16.68 21.1813 17.988 20.8933 19.2386L23.5866 21.6333C23.7025 21.7364 23.7789 21.8767 23.8025 22.03C23.8261 22.1834 23.7955 22.3401 23.7159 22.4733L20.4386 27.9346C20.3864 28.0214 20.3152 28.0952 20.2303 28.1503C20.1453 28.2054 20.049 28.2405 19.9485 28.2528C19.848 28.2652 19.746 28.2545 19.6503 28.2215C19.5545 28.1886 19.4676 28.1342 19.3959 28.0626L16.3906 25.0573C16.1406 24.8072 15.8015 24.6667 15.4479 24.6666H8.55195C8.19835 24.6667 7.85927 24.8072 7.60928 25.0573L4.60395 28.0626C4.53234 28.1342 4.44536 28.1886 4.34963 28.2215C4.25389 28.2545 4.1519 28.2652 4.05141 28.2528C3.95091 28.2405 3.85455 28.2054 3.76962 28.1503C3.6847 28.0952 3.61345 28.0214 3.56128 27.9346L0.283947 22.4746C0.204047 22.3413 0.173243 22.1843 0.196859 22.0307C0.220475 21.877 0.297026 21.7365 0.41328 21.6333L3.10661 19.2386ZM11.9999 15.3333C12.7072 15.3333 13.3855 15.0524 13.8856 14.5523C14.3857 14.0522 14.6666 13.3739 14.6666 12.6666C14.6666 11.9594 14.3857 11.2811 13.8856 10.781C13.3855 10.2809 12.7072 9.99998 11.9999 9.99998C11.2927 9.99998 10.6144 10.2809 10.1143 10.781C9.61423 11.2811 9.33328 11.9594 9.33328 12.6666C9.33328 13.3739 9.61423 14.0522 10.1143 14.5523C10.6144 15.0524 11.2927 15.3333 11.9999 15.3333Z" fill="#E72D2D"/>
+                    </svg>                </div>
                 <div class="comms">
                     <div class="text-wrapper-39">Comms</div>
-                    <img class="icon-2" src="../apps/wenhao-javaw/spaceXImg/icon-2.svg" />
+                    <img class="icon-2" src="apps/wenhao-javaw/spaceXImg/icon-2.svg" />
                 </div>
                 <div class="power">
                     <div class="text-wrapper-39">Power</div>
-                    <img class="icon-3" src="../apps/wenhao-javaw/spaceXImg/icon-7.svg" />
+                    <img class="icon-3" src="apps/wenhao-javaw/spaceXImg/icon-7.svg" />
                 </div>
                 <div class="avionics">
                     <div class="text-wrapper-39">Avionics</div>
-                    <img class="icon-4" src="../apps/wenhao-javaw/spaceXImg/icon-6.svg" />
+                    <img class="icon-4" src="apps/wenhao-javaw/spaceXImg/icon-6.svg" />
                 </div>
                 <div class="prop">
                     <div class="text-wrapper-40">Prop</div>
-                    <img class="icon-5" src="../apps/wenhao-javaw/spaceXImg/image.svg" />
+                    <img class="icon-5" src="apps/wenhao-javaw/spaceXImg/image.svg" />
                 </div>
                 <div class="mech">
                     <div class="text-wrapper-41">Mech</div>
@@ -1954,16 +1955,17 @@
                 </div>
                 <div class="GNC">
                     <div class="text-wrapper-42">GNC</div>
-                    <img class="icon-5" src="../apps/wenhao-javaw/spaceXImg/icon-4.svg" />
+                    <img class="icon-5" src="apps/wenhao-javaw/spaceXImg/icon-4.svg" />
                 </div>
                 <div class="thermal">
                     <div class="text-wrapper-39">Thermal</div>
-                    <img class="icon-6" src="../apps/wenhao-javaw/spaceXImg/icon-3.svg" />
+                    <img class="icon-6" src="apps/wenhao-javaw/spaceXImg/icon-3.svg" />
                 </div>
                 <div class="life">
                     <div class="text-wrapper-43">Life</div>
-                    <img class="icon-5" src="../apps/wenhao-javaw/spaceXImg/icon-5.svg" />
-                </div>
+                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M26.6666 10.6667C26.6666 11.403 26.0696 12 25.3333 12H19.9999V28C19.9999 28.7364 19.403 29.3333 18.6666 29.3333C17.9302 29.3333 17.3333 28.7364 17.3333 28V22.6667C17.3333 21.9303 16.7363 21.3333 15.9999 21.3333C15.2635 21.3333 14.6666 21.9303 14.6666 22.6667V28C14.6666 28.7364 14.0696 29.3333 13.3333 29.3333C12.5969 29.3333 11.9999 28.7364 11.9999 28V12H6.66658C5.9302 12 5.33325 11.403 5.33325 10.6667C5.33325 9.93028 5.93021 9.33332 6.66658 9.33332H25.3333C26.0696 9.33332 26.6666 9.93028 26.6666 10.6667ZM15.9999 2.66666C16.7072 2.66666 17.3854 2.94761 17.8855 3.4477C18.3856 3.9478 18.6666 4.62608 18.6666 5.33332C18.6666 6.04057 18.3856 6.71884 17.8855 7.21894C17.3854 7.71904 16.7072 7.99999 15.9999 7.99999C15.2927 7.99999 14.6144 7.71904 14.1143 7.21894C13.6142 6.71884 13.3333 6.04057 13.3333 5.33332C13.3333 3.85332 14.5199 2.66666 15.9999 2.66666Z" fill="#E72D2D"/>
+                    </svg>                </div>
             </div>
             <div class="active-selection-bar"></div>
         </div>
