dashboard div 优化

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -177,7 +177,7 @@
                 <div class="text-lg font-semibold text-gray-900">
                     Vibration trend
                 </div>
-                <div id="ppo" class="bg-white shadow rounded-lg p-6 w-full h-4/5 mt-4"></div>
+                <div id="ppo" class="bg-white shadow rounded-lg p-6 w-full h-4/5"></div>
                 <div class="text-3xl font-bold text-blue-500 mt-4">
                     1200
                 </div>
